# the-intercept

./: README.md
Assets/Prefabs/: Choice Group.prefab  Choice.prefab  Content.prefab
Assets/Scenes/: Demo.unity
Assets/Scripts/: AccessibleNode.cs
Assets/Scripts/AccessKit/: AccessKit.cs  AccessibleNode.cs  AccessibleNodeData.cs  AccessibleRole.cs  AccessibleScene.cs  AccessibleTree.cs  ActionRequest.cs  AriaLive.cs  DefaultActionVerb.cs  HierarchyPosition.cs  TreeUpdate.cs
Assets/Scripts/Main/States/Game/: GameState.cs
Assets/Scripts/Main/States/Game/View/: ChoiceGroupContainerView.cs  ChoiceGroupView.cs  ChoiceView.cs  ContentView.cs
Assets/Scripts/Main/States/Game/View/Settings/: SettingsButton.cs
Assets/Scripts/Main/States/Intro/: IntroTypedText.cs
Assets/Scripts/Utils/UI/: HasKeyboardFocus.cs  KeyboardFocusTracker.cs
ProjectSettings/: ProjectSettings.asset
accesskit_unity_plugin/: Cargo.toml
accesskit_unity_plugin/src/: lib.rs
accesskit_unity_plugin/src/platform_impl/: null.rs  windows.rs
