[package]
name = "accesskit_unity_plugin"
version = "0.1.0"
edition = "2021"

[lib]
name = "accesskit_unity_plugin"
crate-type = ["dylib"]

[dependencies]
accesskit = { path = "../../accesskit/common", features = ["serde"] }
accesskit_windows = { path = "../../accesskit/platforms/windows" }
serde_json = "1.0"

[dependencies.windows]
version = "0.37.0"
features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
]
